# wayfinder

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  wayfinder_project.slnf
compass/: CMakeLists.txt
engine/wayfinder/: CMakeLists.txt
engine/wayfinder/shaders/: basic_lit.frag  basic_lit.slang  basic_lit.vert  chromatic_aberration.frag  chromatic_aberration.slang  colour_grading.frag  colour_grading.slang  composition.frag  debug_unlit.slang  debug_unlit.vert  fullscreen.vert  fullscreen_copy.frag  fullscreen_copy.slang  textured_lit.frag  textured_lit.slang  textured_lit.vert  unlit.frag  unlit.slang  unlit.vert  vignette.frag  vignette.slang
engine/wayfinder/shaders/modules/: fullscreen.slang  matrix.slang  scene_globals.slang  transforms.slang
engine/wayfinder/src/: WayfinderPCH.h
engine/wayfinder/src/app/: AppBuilder.cpp  AppBuilder.h  AppDescriptor.h  AppSubsystem.h  Application.cpp  Application.h  ApplicationStateMachine.cpp  ApplicationStateMachine.h  ConfigRegistrar.cpp  ConfigRegistrar.h  ConfigService.cpp  ConfigService.h  EditorState.cpp  EditorState.h  EngineConfig.cpp  EngineConfig.h  EngineContext.cpp  EngineContext.h  EngineRuntime.cpp  EngineRuntime.h  EntryPoint.h  FpsOverlayLayer.cpp  FpsOverlayLayer.h  IApplicationState.h  IOverlay.h  Layer.h  LayerStack.cpp  LayerStack.h  OrchestrationTypes.h  OverlayManifest.h  OverlayStack.cpp  OverlayStack.h  PerformanceOverlay.cpp  PerformanceOverlay.h  RenderDeviceSubsystem.cpp  RendererSubsystem.cpp  RendererSubsystem.h  StateManifest.h  StateSubsystem.h  Subsystem.h  (+4 more)
engine/wayfinder/src/application/: Application.cpp  Application.h  EntryPoint.h
engine/wayfinder/src/assets/: AssetCache.h  AssetLoader.h  AssetRegistry.cpp  AssetRegistry.h  AssetSchemaRegistry.cpp  AssetSchemaRegistry.h  AssetService.cpp  AssetService.h  MeshAsset.cpp  MeshAsset.h  MeshFormat.cpp  MeshFormat.h  TextureAsset.cpp  TextureAsset.h
engine/wayfinder/src/core/: Application.cpp  Assert.h  BackendConfig.h  Core.h  EngineConfig.cpp  EngineConfig.h  EngineContext.h  EngineRuntime.cpp  EngineRuntime.h  EntryPoint.h  Game.cpp  Game.h  GameContext.h  GameModule.h  GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  GameplayTag.cpp  GameplayTag.h  GameplayTagRegistry.cpp  GameplayTagRegistry.h  Handle.h  Identifiers.cpp  Identifiers.h  InternedString.cpp  InternedString.h  KeyCodes.h  Layer.h  LayerStack.cpp  Log.h  (+23 more)
sandbox/journey/: CMakeLists.txt  engine.toml  project.wayfinder
sandbox/journey/config/: engine.toml
sandbox/journey/src/: JourneyApplication.cpp  JourneyGame.cpp  JourneyModule.cpp
tests/: .clang-tidy  CMakeLists.txt  FixedTimeSubsystem.h  TestHelpers.h
tests/app/: ApplicationStateMachineTests.cpp  ApplicationStateTests.cpp  EditorStateTests.cpp  EngineConfigTests.cpp  EngineRuntimeTests.cpp  GameplayStateTests.cpp  OrchestrationIntegrationTests.cpp  OverlayStackTests.cpp  PerformanceOverlayTests.cpp  SubsystemTests.cpp
tests/core/: AssetPipelineTests.cpp  EngineConfigTests.cpp  EngineRuntimeTests.cpp  EventQueueTests.cpp  FrustumTests.cpp  GameStateMachineTests.cpp  GameplayTagRegistryTests.cpp  GameplayTagTests.cpp  HandleTests.cpp  IdentifierTests.cpp  InternedStringTests.cpp  MeshFormatTests.cpp  ModuleRegistryTests.cpp  ResultTests.cpp  SubsystemTests.cpp
tests/fixtures/: bad_scene.json  bad_scene.toml  duplicate_scene_object_ids.json  empty_tags.toml  hierarchy_scene.json  hierarchy_scene.toml  material_bad_texture_id.json  minimal_scene.json  minimal_scene.toml  test_engine_config.toml  test_scene.json  test_scene.toml  test_tags.toml  texture_missing_id.json  textured_material.json  unlit_blended_material.json  valid_texture.json
tests/fixtures/blend_test/: unlit_blended_material.json
tests/fixtures/config/: test_config.toml
tests/fixtures/mesh/: triangle.gltf
tests/fixtures/shaders/: invalid_syntax.slang  reflect_fullscreen_blit.slang  reflect_material_textured.slang  reflect_multi_binding.slang  reflect_storage_resources.slang  simple.slang  with_import.slang
tests/gameplay/: GameStateMachineTests.cpp  GameplayTagRegistryTests.cpp  GameplayTagTests.cpp  SimulationTests.cpp  StateMachineTests.cpp  TagRegistryTests.cpp  TagTests.cpp
tests/modules/: ModuleRegistryTests.cpp
tests/physics/: PhysicsIntegrationTests.cpp  PhysicsTests.cpp
tests/plugins/: AppBuilderTests.cpp  ConfigServiceTests.cpp  PluginInterfaceTests.cpp  PluginRegistryTests.cpp  ServiceProviderTests.cpp
tests/rendering/: BlendStateTests.cpp  DebugPassTests.cpp  FrameAllocatorTests.cpp  FrameComposerTests.cpp  MeshManagerTests.cpp  PostProcessFeatureTests.cpp  PostProcessRegistryTests.cpp  RenderContextTests.cpp  RenderFeatureTests.cpp  RenderGraphTests.cpp  RenderOrchestratorTests.cpp  RenderPassTests.cpp  RenderPipelineTests.cpp  RenderServicesTests.cpp  SceneComponentTests.cpp  SceneOpaquePassTests.cpp  SlangCompilerTests.cpp  SlangReflectionTests.cpp  SubmissionDrawingTests.cpp  TextureManagerTests.cpp
tests/scene/: ComponentSerialisationTests.cpp  ComponentSerializationTests.cpp  ComponentValidationTests.cpp  ECSIntegrationTests.cpp  SceneComponentTests.cpp  SceneLoadTests.cpp  SceneSaveTests.cpp
tests/volumes/: BlendableEffectRegistryTests.cpp  VolumeEffectRegistryTests.cpp
tools/gh-issues/: CMakeLists.txt  gh-issues.ps1
tools/gh-issues/src/: Main.cpp
tools/waypoint/: CMakeLists.txt
tools/waypoint/src/: MeshImporter.cpp  MeshImporter.h  WaypointMain.cpp
wayfinder/: CMakeLists.txt
wayfinder/src/: WayfinderPCH.cpp  WayfinderPCH.h
wayfinder/src/core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Game.cpp  Game.h  KeyCodes.h  Layer.h  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  ServiceLocator.cpp
wayfinder/src/graphics/: Material.h
wayfinder/src/input/: InputManager.cpp  InputManager.h
wayfinder/src/platform/: Input.h  Time.h
wayfinder/src/rendering/: RenderPipeline.h  Renderer.cpp  Renderer.h
wayfinder/src/scene/: Scene.cpp  Scene.h
waystone/: CMakeLists.txt
waystone/src/: WaystoneApplication.cpp
(+610 files in other folders)
